chore: use parameter reference
