# internal/http/handler.go
@@ -3,7 +3,7 @@ package http
 import (
 	"net/http"
 
-	oapitypes "github.com/oapi-codegen/runtime/types"
+	"github.com/isutare412/goasis/pkg/oapi"
 )
 
 type handler struct{}
@@ -18,17 +18,17 @@ func (h *handler) CreateCafe(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-func (h *handler) DeleteCafe(w http.ResponseWriter, r *http.Request, cafeId oapitypes.UUID) {
+func (h *handler) DeleteCafe(w http.ResponseWriter, r *http.Request, cafeId oapi.PathCafeId) {
 	// TODO: implement this
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-func (h *handler) GetCafe(w http.ResponseWriter, r *http.Request, cafeId oapitypes.UUID) {
+func (h *handler) GetCafe(w http.ResponseWriter, r *http.Request, cafeId oapi.PathCafeId) {
 	// TODO: implement this
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-func (h *handler) ReplaceCafe(w http.ResponseWriter, r *http.Request, cafeId oapitypes.UUID) {
+func (h *handler) ReplaceCafe(w http.ResponseWriter, r *http.Request, cafeId oapi.PathCafeId) {
 	// TODO: implement this
 	w.WriteHeader(http.StatusNotImplemented)
 }
